# dnsping

./: .gitignore  CHANGELOG.md  README.md  dev.bat  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
docs/: api.md  installation.md  usage.md
src/dnsping/: __init__.py  __main__.py  dns_servers.txt  models.py  privilege.py  scanner.py  utils.py
tests/: README.md  conftest.py  test_config.py  test_display_functions.py  test_dns_configuration.py  test_dns_result.py  test_edge_cases.py  test_error_handling.py  test_integration.py  test_ip_validation.py  test_main_function.py  test_network_operations.py  test_package_resources.py  test_privilege.py  test_privilege_elevation.py  test_privilege_manager.py  test_scan_workflow.py  test_scanner.py  test_scanner_core.py  test_utilities.py
