[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsping"
version = "1.0.0"
description = "High-performance DNS server latency monitoring and ranking tool"
readme = "README.md"
authors = [
    {name = "Milad", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
keywords = ["dns", "latency", "benchmark", "network", "monitoring", "performance", "ping"]
requires-python = ">=3.8"
dependencies = [
    "dnspython>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/milad-hub/dnsping"
Documentation = "https://github.com/milad-hub/dnsping#readme"
Repository = "https://github.com/milad-hub/dnsping"
Issues = "https://github.com/milad-hub/dnsping/issues"
Changelog = "https://github.com/milad-hub/dnsping/blob/main/CHANGELOG.md"

[project.scripts]
# This creates the CLI command (like "bin" in package.json)
dnsping = "dnsping.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dnsping = ["*.txt", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dnsping --cov-report=html --cov-report=term"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
